tests/cases/scc/error/0016-arrayinitsize.c
//!necc-dbg @ -as
int x[2] = {1, 2, 3};
